-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 15
-
Component/s: hotspot
-
b12
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8292626 | 11.0.17 | Paul Hohensee | P4 | Resolved | Fixed | b04 |
make test TEST="jdk/jfr/jvm/TestJFRIntrinsic.java" JTREG="VM_OPTIONS=-XX:-TieredCompilation" CONF=linux-x86_64-server-release
...
ACTION: main -- Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Failed to enqueue method on level: 4
REASON: User specified action: run main/othervm -Xbootclasspath/a:. -ea -Xmixed -Xbatch -XX:TieredStopAtLevel=1 -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI jdk.jfr.jvm.TestJFRIntrinsic
TIME: 0.139 seconds
messages:
command: main -Xbootclasspath/a:. -ea -Xmixed -Xbatch -XX:TieredStopAtLevel=1 -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI jdk.jfr.jvm.TestJFRIntrinsic
reason: User specified action: run main/othervm -Xbootclasspath/a:. -ea -Xmixed -Xbatch -XX:TieredStopAtLevel=1 -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI jdk.jfr.jvm.TestJFRIntrinsic
Mode: othervm [/othervm specified]
Additional options from @modules: --add-modules jdk.jfr,java.base,java.management --add-exports jdk.jfr/jdk.jfr.internal=ALL-UNNAMED --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
elapsed time (seconds): 0.139
configuration:
Boot Layer
add modules: jdk.jfr java.base java.management
add exports: java.base/jdk.internal.misc ALL-UNNAMED
jdk.jfr/jdk.jfr.internal ALL-UNNAMED
STDOUT:
WB error: invalid compilation level 4
STDERR:
java.lang.RuntimeException: Failed to enqueue method on level: 4
at jdk.jfr.jvm.TestJFRIntrinsic.runIntrinsicTest(TestJFRIntrinsic.java:107)
at jdk.jfr.jvm.TestJFRIntrinsic.main(TestJFRIntrinsic.java:73)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:564)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:832)
JavaTest Message: Test threw exception: java.lang.RuntimeException: Failed to enqueue method on level: 4
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.RuntimeException: Failed to enqueue method on level: 4
...
...
ACTION: main -- Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Failed to enqueue method on level: 4
REASON: User specified action: run main/othervm -Xbootclasspath/a:. -ea -Xmixed -Xbatch -XX:TieredStopAtLevel=1 -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI jdk.jfr.jvm.TestJFRIntrinsic
TIME: 0.139 seconds
messages:
command: main -Xbootclasspath/a:. -ea -Xmixed -Xbatch -XX:TieredStopAtLevel=1 -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI jdk.jfr.jvm.TestJFRIntrinsic
reason: User specified action: run main/othervm -Xbootclasspath/a:. -ea -Xmixed -Xbatch -XX:TieredStopAtLevel=1 -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI jdk.jfr.jvm.TestJFRIntrinsic
Mode: othervm [/othervm specified]
Additional options from @modules: --add-modules jdk.jfr,java.base,java.management --add-exports jdk.jfr/jdk.jfr.internal=ALL-UNNAMED --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
elapsed time (seconds): 0.139
configuration:
Boot Layer
add modules: jdk.jfr java.base java.management
add exports: java.base/jdk.internal.misc ALL-UNNAMED
jdk.jfr/jdk.jfr.internal ALL-UNNAMED
STDOUT:
WB error: invalid compilation level 4
STDERR:
java.lang.RuntimeException: Failed to enqueue method on level: 4
at jdk.jfr.jvm.TestJFRIntrinsic.runIntrinsicTest(TestJFRIntrinsic.java:107)
at jdk.jfr.jvm.TestJFRIntrinsic.main(TestJFRIntrinsic.java:73)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:564)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:832)
JavaTest Message: Test threw exception: java.lang.RuntimeException: Failed to enqueue method on level: 4
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.RuntimeException: Failed to enqueue method on level: 4
...
- backported by
-
JDK-8292626 jdk/jfr/jvm/TestJFRIntrinsic.java failed with -XX:-TieredCompilation
-
- Resolved
-
- relates to
-
JDK-8346288 WB_IsIntrinsicAvailable fails if called with wrong compilation level
-
- Resolved
-