8239423: jdk/jfr/jvm/TestJFRIntrinsic.java failed with -XX:-TieredCompilation

Reviewed-by: iignatyev, dholmes